# flippy

./: Cargo.toml  README.md
assets/texture/: background.ron  bird.ron  ground.ron  pipe.ron
assets/ui/: text.ron
config/: display.ron
src/: main.rs
