[package]
name = "flippy"
version = "0.1.0"
authors = ["Sebastian Richter <sebastian.richter@paessler.com>"]
edition = "2018"

[dependencies]
amethyst = { version = "0.15", features = ["no-slow-safety-checks", "tiles"] }
rand = "0.7"

[features]
default = ["metal"]
metal = ["amethyst/metal"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

